# Minecraft-Console-Edition

./: .gitignore  README.md  requirements.txt
4jcraft/: OBSERVAÇÂO.md  README.md  flake.nix  meson.build  meson.options
4jcraft/.github/workflows/: build-doxygen.yml  build-linux.yml  release-linux.yml
4jcraft/4J.Render/: 4J_Render.cpp  4J_Render.h
4jcraft/Minecraft.Client/: Minecraft.cpp  meson.build
4jcraft/Minecraft.Client/GameState/: CreativeMode.cpp
4jcraft/Minecraft.Client/Level/: MultiPlayerLevel.cpp  ServerLevel.cpp  ServerLevel.h
4jcraft/Minecraft.Client/Network/: ClientConnection.cpp
4jcraft/Minecraft.Client/Platform/: stdafx.h  stubs.h
4jcraft/Minecraft.Client/Platform/Common/: ConsoleGameMode.cpp  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h
4jcraft/Minecraft.Client/Platform/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h
4jcraft/Minecraft.Client/Platform/Common/DLC/: DLCSkinFile.h
4jcraft/Minecraft.Client/Platform/Common/GameRules/: ApplySchematicRuleDefinition.cpp  ApplySchematicRuleDefinition.h  ConsoleGenerateStructure.h  ConsoleSchematicFile.h  GameRuleDefinition.h  LevelGenerationOptions.cpp  LevelGenerationOptions.h  NamedAreaRuleDefinition.h  StartFeature.h  UpdatePlayerRuleDefinition.cpp  UseTileRuleDefinition.h
4jcraft/Minecraft.Client/Platform/Common/Leaderboards/: LeaderboardManager.cpp  SonyLeaderboardManager.cpp  SonyLeaderboardManager.h
4jcraft/Minecraft.Client/Platform/Common/Network/: GameNetworkManager.h  NetworkPlayerQNet.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.h
4jcraft/Minecraft.Client/Platform/Common/Telemetry/: TelemetryManager.h
4jcraft/Minecraft.Client/Platform/Common/Tutorial/: TutorialMode.h
4jcraft/Minecraft.Client/Platform/Linux/: LinuxGL.cpp  LinuxGL.h  linux_game_stubs.cpp
4jcraft/Minecraft.Client/Platform/Linux/Stubs/: winapi_stubs.h
4jcraft/Minecraft.Client/Player/: LocalPlayer.cpp
4jcraft/Minecraft.Client/Rendering/: Chunk.cpp  Cube.cpp  GameRenderer.cpp  LevelRenderer.cpp  Polygon.cpp
4jcraft/Minecraft.Client/Rendering/EntityRenderers/: ItemRenderer.cpp
4jcraft/Minecraft.Client/UI/: AbstractBeaconButton.cpp  BeaconCancelButton.cpp  BeaconConfirmButton.cpp  BeaconPowerButton.cpp  BeaconPowerButton.h  Font.h  Gui.h  GuiComponent.cpp  GuiComponent.h  Screen.cpp  Screen.h  ScreenSizeCalculator.cpp  TradeSwitchButton.cpp
4jcraft/Minecraft.Client/UI/Screens/: EnchantmentScreen.cpp  PauseScreen.cpp  PauseScreen.h
4jcraft/Minecraft.World/: meson.build
4jcraft/Minecraft.World/Core/: BehaviorRegistry.h
4jcraft/Minecraft.World/Headers/: net.minecraft.locale.h
4jcraft/Minecraft.World/IO/Files/: File.cpp
4jcraft/Minecraft.World/IO/NBT/: CompoundTag.h
4jcraft/Minecraft.World/IO/Streams/: DataOutputStream.h
4jcraft/Minecraft.World/Level/: Level.cpp
4jcraft/Minecraft.World/Level/Storage/: OldChunkStorage.h
4jcraft/Minecraft.World/Platform/: stdafx.h
4jcraft/Minecraft.World/Recipes/: FireworksRecipe.h
4jcraft/Minecraft.World/Stats/: Stats.h
4jcraft/Minecraft.World/WorldGen/: StructureFeatureIO.h
4jcraft/scripts/: copy_assets_to_client.py  setup_build.sh
